syntax = "proto3";
package encryptionpb;
option go_package = "github.com/Anthony-Bible/password-exchange/app/encryptionpb";

message PlainMessage{
  string Email = 1;
  string FirstName  = 2;
  string OtherFirstName = 3 ;
  string OtherLastName = 4;
  string OtherEmail = 5;
  string Uniqueid = 6;
  string Content = 7;
}
message EncryptedMessage{
  string Email = 1;
  string FirstName  = 2;
  string OtherFirstName = 3 ;
  string OtherLastName = 4;
  string OtherEmail = 5;
  string Uniqueid = 6;
  string Content = 7;


}
message PlainString{
  string PlainText = 1;
}
message EncryptionString{
  string EncryptedText = 1;
}
service messageService{
  rpc encryptMessage(PlainString) returns (EncryptionString) {}
}
